--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "popcorntime_remote.js",
+  "name": "butter_remote.js",
   "devDependencies": {
     "uglify": "latest"
   },
   "scripts": {
-    "uglify": "uglify -s dist/popcorntime_remote.js -o dist/popcorntime_remote.min.js"
+    "uglify": "uglify -s dist/butter_remote.js -o dist/butter_remote.min.js"
   }
 }
